--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.8.2",
+    "react-toastify": "^9.1.2",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
